apps/nextcloud/redis/networkpolicies/ingress-nextcloud-redis.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-nextcloud-redis
  namespace: nextcloud
spec:
  selector: >-
    app == 'nextcloud' &&
    component == 'redis'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: >-
          app == 'nextcloud' &&
          component == 'fpm-nginx'
      destination:
        ports:
          - 6379
