apps/nextcloud/redis/networkpolicies/redis.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: redis
  namespace: nextcloud
spec:
  endpointSelector:
    matchLabels:
      app: nextcloud
      component: redis
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: nextcloud
            component: fpm-nginx
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
